--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate NOFAR</span></a></h1>
+					<h1 id="fh5co-logo"><a href="index.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -88,11 +88,11 @@
 							<li>
 								<a href="properties.html" class="fh5co-sub-ddown">Properties</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="#">Family</a></li>
-									<li><a href="#">CSS3 &amp; HTML5</a></li>
-									<li><a href="#">Angular JS</a></li>
-									<li><a href="#">Node JS</a></li>
-									<li><a href="#">Django &amp; Python</a></li>
+									<li><a href="#">New Ones</a></li>
+									<li><a href="#">Discount</a></li>
+									<li><a href="#">Sale</a></li>
+									<li><a href="#">Rent</a></li>
+									<li><a href="#">All</a></li>
 								</ul>
 							</li>
 							<li><a href="agent.html">Agent</a></li>
