num copy page update do not delete

--- a/Public/sass/blog.html
+++ b/Public/sass/blog.html
@@ -86,7 +86,7 @@
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="Home.html">Home</a></li>
 							<li>
-								<a href="properties.html" class="fh5co-sub-ddown">Properties</a>
+								<a href="Assets.html" class="fh5co-sub-ddown">Assets</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">Family</a></li>
 									<li><a href="#">CSS3 &amp; HTML5</a></li>
