--- a/Public/sass/HomeManger.html
+++ b/Public/sass/HomeManger.html
@@ -85,7 +85,7 @@
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="HomeManger.html">Home</a></li>
 							<li>
-								<a href="properties.html" class="fh5co-sub-ddown">Properties</a>
+								<a href="Assets.html" class="fh5co-sub-ddown">Properties</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">New Ones</a></li>
 									<li><a href="#">Discount</a></li>
