Description of your changes

--- a/Public/sass/Index.html
+++ b/Public/sass/Index.html
@@ -11,10 +11,9 @@
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f7f7f7;
-            background-image: url('https://source.unsplash.com/1600x900/?luxury,houses');
+            background-image: url(images/mol.png);
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
             display: flex;
             justify-content: center;
             align-items: center;
