ADD PAGE AND MORE LITTEL STUPE

--- a/Public/BlogManager.html
+++ b/Public/BlogManager.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
  <html class="no-js">
@@ -66,13 +65,13 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li><a href="Home.html">Home</a></li>
+							<li><a href="HomeManager.html">Home</a></li>
 							<li>
-								<a href="Assets.html" class="fh5co-sub-ddown">Assets</a>
+								<a href="AssetsManager.html" class="fh5co-sub-ddown">Assets</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">New</a></li>
 									<li><a href="#">Discount</a></li>
@@ -81,9 +80,9 @@
 									<li><a href="#">All</a></li>
 								</ul>
 							</li>
-							<li><a href="agent.html">Agent</a></li>
-							<li class="active"><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+                            <li><a href="Manager.html">Manager</a></li>
+							<li class="active"><a href="BlogManager.html">Blog</a></li>
+							<li><a href="AddManager.html">Add</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -278,4 +277,3 @@
 
 	</body>
 </html>
-
