--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -77,6 +77,7 @@
 										<li><a href="#">Rent</a></li>
 										<li><a href="#">All</a></li>
 								</ul>
+								</ul>
 							</li>
 							<li><a href="Manager.html">Manager</a></li>
 							<li><a href="BlogManager.html">Blog</a></li>
@@ -769,7 +770,7 @@
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-3">
 							<h3 class="section-title">About Us</h3>
-							<p>We, Bar Michal and Nofer, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
+							<p>We, Bar Michal and Nofar, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
