--- a/Public/Manager.html
+++ b/Public/Manager.html
@@ -132,7 +132,7 @@
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-3">
 							<h3 class="section-title">About Us</h3>
-							<p>We, Bar Michal and Nofer, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
+							<p>We, Bar Michal and Nofar, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
