--- a/Public/BlogManager.html
+++ b/Public/BlogManager.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
  <html class="no-js">
@@ -65,13 +66,13 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li><a href="HomeManager.html">Home</a></li>
+							<li><a href="Home.html">Home</a></li>
 							<li>
-								<a href="AssetsManager.html" class="fh5co-sub-ddown">Assets</a>
+								<a href="Assets.html" class="fh5co-sub-ddown">Assets</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">New</a></li>
 									<li><a href="#">Discount</a></li>
@@ -80,9 +81,9 @@
 									<li><a href="#">All</a></li>
 								</ul>
 							</li>
-                            <li><a href="Manager.html">Manager</a></li>
-							<li class="active"><a href="BlogManager.html">Blog</a></li>
-							<li><a href="AddManager.html">Add</a></li>
+							<li><a href="agent.html">Agent</a></li>
+							<li class="active"><a href="blog.html">Blog</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -153,7 +154,7 @@
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-3">
 							<h3 class="section-title">About Us</h3>
-							<p>We, Bar Michal and Nofer, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
+							<p>We, Bar Michal and Nofar, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
@@ -277,3 +278,4 @@
 
 	</body>
 </html>
+
