--- a/Public/‏‏blog - עותק.html
+++ b/Public/‏‏blog - עותק.html
@@ -270,40 +270,39 @@
 	<!-- jQuery -->
 
 <script>
-	   document.addEventListener('DOMContentLoaded', async () => {
-            try {
-                const response = await fetch('/feedback');
-                if (!response.ok) {
-                    throw new Error('Failed to fetch feedback data');
-                }
-                const data = await response.json();
+	    document.addEventListener('DOMContentLoaded', async () => {
+    try {
+        const response = await fetch('/feedback'); // קריאה לכתובת הקשורה לדירוגים
+        if (!response.ok) {
+            throw new Error('Failed to fetch feedback data');
+        }
+        const data = await response.json(); // קריאת המידע בפורמט JSON
 
-                const feedbackList = document.getElementById('feedbackList');
-                if (!feedbackList) {
-                    throw new Error('Element with ID "feedbackList" not found');
-                }
+        const feedbackList = document.getElementById('feedbackList'); // איתור איבר ה-HTML שבו יוצגו הדירוגים
+        if (!feedbackList) {
+            throw new Error('Element with ID "feedbackList" not found');
+        }
 
-                feedbackList.innerHTML = '';
+        feedbackList.innerHTML = ''; // ניקוי תוכן קיים באיבר
 
-                data.forEach((feedback) => {
-                    const card = document.createElement('div');
-                    card.classList.add('feedback-card');
+        // הוספת הדירוגים לאיבר ה-HTML
+        data.forEach((feedback) => {
+            const card = document.createElement('div');
+            card.classList.add('feedback-card');
 
-					card.innerHTML = `
-						<h2 <i class="icon-bubble2"> <i class="comment"> ${feedback.Name}</h2>
-                        <p>Date: ${feedback.Date}</p>
-                        <p>${feedback.FeedbackDesc}</p>
-                        <p>Rating: ${feedback.Rating} stars</p>
-                    `; 
+            card.innerHTML = `
+                <h2><i class="icon-bubble2"></i> <i class="comment">${feedback.Name}</i></h2>
+                <p>Date: ${feedback.Date}</p>
+                <p>${feedback.FeedbackDesc}</p>
+                <p>Rating: ${feedback.Rating}</p>
+            `;
 
-                    feedbackList.appendChild(card);
-                });
-				
-            } catch (error) {
-                console.error('Error fetching feedback:', error.message);
-            }
+            feedbackList.appendChild(card);
         });
-
+    } catch (error) {
+        console.error('Error fetching feedback:', error.message);
+    }
+});
 
 
 	document.addEventListener("DOMContentLoaded", function () {
