--- a/Public/Manager.html
+++ b/Public/Manager.html
@@ -124,7 +124,7 @@
             </div>
 			
 
-
+		</div>
 
 		<footer>
 			<div id="footer">
@@ -185,6 +185,11 @@
 			</div>
 		</footer>
           
+	</div>
+	<!-- END fh5co-page -->
+
+	</div>
+
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
