--- a/Public/Home.html
+++ b/Public/Home.html
@@ -74,7 +74,7 @@
 								</ul>
 							</li>
 							<li><a href="agent.html">Agent</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="BlogManager.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
