--- a/Public/blog.html
+++ b/Public/blog.html
@@ -293,7 +293,7 @@
 						<h2 <i class="icon-bubble2"> <i class="comment"> ${feedback.Name}</h2>
                         <p>Date: ${feedback.Date}</p>
                         <p>${feedback.FeedbackDesc}</p>
-                        <p>Rating: ${feedback.Rating} stars</p>
+                        <p>Rating: ${feedback.rating} stars</p>
                     `; 
 
                     feedbackList.appendChild(card);
