--- a/Public/BlogManager.html
+++ b/Public/BlogManager.html
@@ -81,9 +81,9 @@
 									<li><a href="#">All</a></li>
 								</ul>
 							</li>
-							<li><a href="agent.html">Agent</a></li>
-							<li class="active"><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="Manager.html">Manager</a></li>
+							<li class="active"><a href="BlogManager.html">Blog</a></li>
+							<li><a href="AddManager.html">Add</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -241,7 +241,7 @@
 						<h2 <i class="icon-bubble2"> <i class="comment"> ${feedback.Name}</h2>
                         <p>Date: ${feedback.Date}</p>
                         <p>${feedback.FeedbackDesc}</p>
-                        <p>Rating: ${feedback.Rating} stars</p>
+                        <p>Rating: ${feedback.rating} stars</p>
                     `; 
 
                     feedbackList.appendChild(card);
