--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -80,7 +80,7 @@
 								</ul>
 							</li>
 							<li><a href="Manager.html">Manager</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="BlogManager.html">Blog</a></li>
 							<li><a href="AddManager.html">Add</a></li>
 						</ul>
 					</nav>
