--- a/Public/agent.html
+++ b/Public/agent.html
@@ -80,6 +80,7 @@
 							</li>
 							<li class="active"><a href="agent.html">Agent</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="Meeting.html">Meeting</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
