--- a/Public/contact.html
+++ b/Public/contact.html
@@ -81,6 +81,7 @@
 								</ul>
 							</li>
 							<li><a href="agent.html">Agent</a></li>
+							<li><a href="Meeting.html">Meeting</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li class="active"><a href="contact.html">Contact</a></li>
 						</ul>
