--- a/Public/AssetsManager.html
+++ b/Public/AssetsManager.html
@@ -121,7 +121,7 @@
                             <select id="asset-type-select" class="cs-select cs-skin-border">
                                 <option value="" disabled selected>Any</option>
                                 <option value="Rent">Rent</option>
-                                <option value="Buy">Buy</option>
+                                <option value="Sell">Sell</option>
                             </select>
                         </section>
                     </div>
