--- a/Public/AddManager.html
+++ b/Public/AddManager.html
@@ -141,6 +141,8 @@
 			
 			<div class="container">
                     <!-- Property Information Form -->
+					<button class="property-button" onclick="toggleAddPropertyForm()">Add Property</button>
+					<div id="addPropertyForm" style="display: none;">
                     <form id="propertyForm" action="/addProperty" method="POST">
                         <div class="form-group">
                             <label for="assetType">Asset Type:</label>
@@ -174,6 +176,7 @@
                             Property added successfully!
                         </div>
                     </form>
+				</div>
                 </div>
             </div>
 			
@@ -190,6 +193,8 @@
 
 			<div class="container">
 				<!-- Property Information Form -->
+				<button class="property-button" onclick="toggleUpdatePropertyForm()">Update Property</button>
+				<div id="updatePropertyForm" style="display: none;">
 				<form id="propertyFormUpdate" action="/updateProperty" method="POST">
 					<div class="form-group">
 						<label for="assetID">AssetID:</label>
@@ -227,6 +232,7 @@
 						Property added successfully!
 					</div>
 				</form>
+			</div>
 			</div>
 		</div>
 
@@ -380,7 +386,28 @@
 });
 });
 </script>
+<script>
+function toggleAddPropertyForm() {
+    var addPropertyForm = document.getElementById("addPropertyForm");
+    if (addPropertyForm.style.display === "none") {
+        addPropertyForm.style.display = "block";
+    } else {
+        addPropertyForm.style.display = "none";
+    }
+}
 
+</script>
+<script>
+	function toggleUpdatePropertyForm() {
+		var addPropertyForm = document.getElementById("updatePropertyForm");
+		if (addPropertyForm.style.display === "none") {
+			addPropertyForm.style.display = "block";
+		} else {
+			addPropertyForm.style.display = "none";
+		}
+	}
+	
+	</script>
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
