Description of your changes

--- a/Public/AssetsManager.html
+++ b/Public/AssetsManager.html
@@ -78,7 +78,7 @@
                                         <li><a href="#">All</a></li>
                                     </ul>
                                 </li>
-                            <li><a href="Manager.html">Manger</a></li>
+                            <li><a href="Manager.html">Manager</a></li>
                             <li><a href="BlogManager.html">Blog</a></li>
                             <li><a href="AddManager.html">Add</a></li>
                         </ul>
