--- a/Public/Meeting.html
+++ b/Public/Meeting.html
@@ -137,6 +137,14 @@
 							<label for="location">Location:</label>
 							<input type="text" class="form-control" id="location" name="location" required>
 						</div> <br>
+						<div class="form-group">
+							<label for="partner">Partner:</label>
+							<select class="form-control" id="partner" name="partner" required>
+								<option value="">Select Partner</option>
+								<option value="Ovad Zangi">Ovad Zangi</option>
+								<option value="Gil Nissim">Gil Nissim</option>
+							</select>
+						</div> <br>
 						<button type="submit" class="btn btn-primary" id="sub">Submit</button>
 						<div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
 							Meeting added successfully!
