--- a/Public/Home.html
+++ b/Public/Home.html
@@ -162,6 +162,9 @@
 		</aside>
 
 		<div id="fh5co-search-map">
+			<video autoplay loop muted>
+				<source src="images/MOVIE.mp4" type="video/mp4">
+			</video>
 			<div class="search-property">
 				<div class="s-holder">
 					<h2>Search Properties</h2>
